# Enceladus-bot

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  enclanadus_bot.toml  enclanadus_bot_compiled.toml
resources/: example_input.json
src/: ants.rs  direct_flow.rs  edges.json  flow_1.rs  index.html  main.rs  neighbourhood.rs  nodes.json  simple_algoritm.rs  state.rs  structs.rs
