[package]
name = "enceladus-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
itertools = "0.10.5"
prettytable-rs = "0.9.0"
priq = "0.2.0"
queues = "1.1.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
smallvec = "1.10.0"
vec_map = "0.8.2"
